--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ package-mode = false
 python = "^3.12"
 chainlit = "^2.0.0"
 langchain = "^0.3.0"
+langchain-anthropic = "^0.3.0"
 langchain-openai = "^0.2.0"
 langchain-community = "^0.3.0"
+langchain-text-splitters = "^0.3.0"
+anthropic = "^0.40.0"
 chromadb = "^0.5.0"
 openai = "^1.102.0"
 python-dotenv = "^1.0.0"
